--- a/notebooks/Figure-1-method.Rmd
+++ b/notebooks/Figure-1-method.Rmd
@@ -16,38 +16,25 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(demuxSNPpaperfigures)
+library(ggpubr)
+library(dittoSeq)
+library(ComplexHeatmap)
 ```
 
-````{r fig.height=2.5,fig.width=3.5}
-set.seed(3)
-dfa<-data.frame(x=rnorm(5,mean=0.95,sd=0.05),y=rnorm(5,mean=0.05,sd=0.05),sample="Hashtag1")
-dfb<-data.frame(x=rnorm(4,mean=0.05,sd=0.05),y=rnorm(4,mean=0.95,sd=0.05),sample="Hashtag2")
-#dfc<-data.frame(x=rnorm(5,mean=0.95,sd=0.05),y=rnorm(5,mean=0.95,sd=0.05),sample="c")
-df_tot<-rbind(dfa,dfb)
-df_tot$sample[9]<-"uncertain"
-gg<-ggpar(ggscatter(df_tot,x="x",y="y",color = "sample",palette=c(dittoColors()[1:2],"#808080"),label='sample',repel = TRUE),xlab="SNP1",ylab="SNP2")
-gg
-gg+ rremove('legend') + scale_x_continuous(n.breaks=2)+ scale_y_continuous(n.breaks=2)
+````{r}
 
-
-
+seed=5
 
 ````
-
-
-
-
-
 
 ````{r fig.width=12,fig.height=3}
 source("../R/hto_sim.R")
 source("../R/plot_hashtag.R")
-
+source("../R/snp_sim.R")
 ````
 
-````{r fig.height=4, fig.width=5.5}
-library(dittoSeq)
-library(ggpubr)
+````{r fig.height=3, fig.width=10}
+
 mat<-logimat(2,c(800,800),0,0)
 
 size_sig=rep(3.5,2)
@@ -55,6 +42,8 @@ size_bg=rep(7,7)
 mu_sig=c(1400,600)
 mu_bg=c(110,120)
 params<-c(size_sig,size_bg,mu_sig,mu_bg)
+
+set.seed(1)
 counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat)
 
 library(Seurat)
@@ -64,7 +53,7 @@ split2<-!split1
 split<-rbind(split1,split2)
 p<-plot_hashtag(as.data.frame(t(norm)),ylim=c(0,350),xlim=c(0,3),split=split)
 
-p[[1]] / p[[2]]
+p[[1]] + p[[2]]
 
 
 ````
@@ -74,5 +63,118 @@ p[[1]] / p[[2]]
 
 lgd = Legend(at = c("Hashtag1 signal","Hashtag2 signal","Background staining"), title = "HTO distribution", legend_gp = gpar(fill = c(dittoColors()[1:2],'#808080')),ncol=1)
 draw(lgd,test="")
+
+````
+
+
+
+````{r}
+library(viridisLite)
+colors <- structure(viridis(n = 3), names = c("0", "1", "3"))
+
+set.seed(seed)
+n=c(10,10)
+nsnps=15
+snps_mat<-c()
+for (i in seq_along(n)) {
+  snp<-rbinom(nsnps,1,0.25)
+  h<-matrix(rep(snp,n[i]),nsnps,n[i])
+  colnames(h)<-rep(paste("Hashtag",i,sep=""),ncol(h))
+  snps_mat<-cbind(snps_mat,h)
+}
+
+snps_mat[snps_mat==1]<-3
+snps_mat[snps_mat==0]<-1
+snps_mat[snps_mat==0]<-c(-1)
+tot_mixed<-snps_mat[,sample(1:sum(n))]
+
+Heatmap(snps_mat,cluster_columns=FALSE,cluster_rows=FALSE,col=colors)
+Heatmap(tot_mixed,cluster_columns = FALSE,cluster_rows=FALSE,col=colors)
+Heatmap(tot_mixed,cluster_columns = TRUE,cluster_rows=FALSE,row_gap = unit(1, "mm"),
+    column_gap = unit(1, "mm"),column_split=4, col=colors)
+
+Heatmap(tot_mixed,cluster_rows = FALSE)
+q=100
+r<-sample(seq_len(nrow(tot_mixed)),q,replace=TRUE)
+c<-sample(seq_len(ncol(tot_mixed)),q,replace=TRUE)
+m<-cbind(r,c)
+head(m)
+
+tot_mixed[m]<-0
+mode(tot_mixed)<-'integer'
+colnames(tot_mixed)[sample(1:20,3)]<-"uncertain"
+colnames(tot_mixed)[sample(1:20,2)]<-"negative"
+Heatmap(tot_mixed,cluster_rows=FALSE,column_split=colnames(tot_mixed),show_column_dend = FALSE,show_column_names = FALSE,cluster_column_slices = FALSE,row_title = 'SNPs')
+
+
+````
+
+
+
+````{r}
+
+agg<-t(aggregate(t(data.frame(tot_mixed)),by=list(as.character(colnames(tot_mixed))), Mode))
+
+colnames(agg)<-agg[1,]
+agg<-agg[-c(1),]
+mode(agg)<-"numeric"
+agg_doub<-sim_doubs(agg)
+Heatmap(agg_doub,cluster_columns = FALSE,cluster_rows = FALSE)
+````
+
+
+````{r fig.height=7,fig.width=14}
+
+rownames(agg_doub)<-NULL
+
+snps_col=structure(viridis(n = 3), names = c(1,0,3))
+snps_list<-list(snps_col)
+names(snps_list)='SNPs'
+
+pred_col=structure(dittoColors()[c(1:2,7)],names=c('Hashtag1','Hashtag2','Doublet'))
+pred_list<-list(pred_col)
+names(pred_list)='predicted_class'
+j<-jaccard_weighted(tot_mixed,agg_doub)
+
+top<-HeatmapAnnotation(SNPs=t(tot_mixed[,]),
+                       col=snps_list,
+                       annotation_legend_param = list(title="SNP status",at=c(0,1,3),
+                       labels=c("No reads","Absent","Present")),
+                       show_legend = FALSE,
+                       annotation_name_rot = -90,
+                       annotation_name_side = "left")
+
+left<-rowAnnotation(SNPs=t(agg_doub[,1:3]),
+                    col=snps_list,
+                    show_legend=FALSE,
+                    annotation_name_rot=0,
+                    annotation_name_side="top")
+bottom=HeatmapAnnotation(predicted_class=c('Hashtag1','Hashtag2')[max.col(-j)],col=pred_list,show_legend = FALSE)
+library(circlize);col_fun<-colorRamp2(c(0,1),hcl_palette = 'RdBu')
+
+
+hm<-Heatmap(t(j),
+        cluster_rows = FALSE,
+        cluster_columns  = FALSE,
+        col = col_fun,
+        heatmap_legend_param = list(title = "Jaccard Distance",direction = "vertical"),
+        top_annotation = top,
+        height=unit(3,'cm'),
+        left_annotation = left,
+        bottom=bottom,
+        row_names_side = 'left',
+        column_split = rownames(j),
+        show_heatmap_legend = F)
+draw(hm)
+````
+````{r}
+
+lgd1<-Legend(at =c("Absent","No reads","Present"), title='SNP status',legend_gp = gpar(fill=viridis(n = 3)))
+lgd2<-Legend(col_fun=col_fun,title="Jaccard\ndistance",at=c(0,1))
+lgd3<-Legend(at = c("Hashtag1","Hashtag2","Doublet"),title = "Predicted class", legend_gp = gpar(fill=dittoColors()[c(1:2,7)]))
+pd<-packLegend(lgd1,lgd2,lgd3,direction="horizontal")
+
+draw(pd,test="")
+
 
 ````
