--- a/notebooks/Figure-4-application.Rmd
+++ b/notebooks/Figure-4-application.Rmd
@@ -105,18 +105,20 @@ sce<-add_snps(sce,mat=mat)
 sce<-high_conf_calls(sce)
 sce<-reassign(sce,k=20,d=50)
 sce<-reassign_jaccard(sce,k=20,d=50)
-sce<-reassign_balanced(sce,k=20,d=100,n=200)
+sce<-reassign_balanced(sce,k=20)
+#sce$reassign_jaccard<-reassign_centroid(sce,train_cells=sce$train,predict_cells = sce$predict)
+sce$knn_centroid<-reassign_centroid(sce,predict_cells=!sce$train)
 sce$hash.ID<-seurat_app$hash.ID
 soup<-read.table(file="../data/clusters.tsv", sep='\t',header=TRUE)
 soup$assignment[soup$status=="doublet"]<-"Doublet"
 soup$assignment[soup$status=="unassigned"]<-"unassigned"
 sce$soup<-soup$assignment
 
-table(sce$knn_balanced)
+table(sce$knn_centroid)
 table(sce$hash.ID)
 table(sce$soup)
 
-table(sce$soup,sce$knn)
+table(sce$soup,sce$knn_centroid)
 
 sce$soup_rc<-recode(sce$soup,
                     "0"="Hashtag6",
@@ -126,7 +128,7 @@ sce$soup_rc<-recode(sce$soup,
                     "4"="Hashtag3",
                     "5"="Hashtag4")
 
-table(sce$soup_rc,sce$knn)
+table(sce$soup_rc,sce$knn_centroid)
 
 
 ````
@@ -137,9 +139,10 @@ table(sce$soup_rc,sce$knn)
 
 
 library(ggalluvial)
-df_all<-data.frame(soup=sce$soup_rc,demuxSNP=sce$knn_balanced,htodemux=sce$hash.ID)
-df_allrs<-reshape2::melt(table(sce$soup_rc,sce$knn_balanced,sce$hash.ID))
+df_all<-data.frame(soup=sce$soup_rc,demuxSNP=sce$knn_centroid,htodemux=sce$hash.ID)
+df_allrs<-reshape2::melt(table(sce$soup_rc,sce$knn_centroid,sce$hash.ID))
 colnames(df_allrs)<-c("souporcell","demuxSNP","HTODemux","ncells")
+df_allrs$demuxSNP<-gsub('K','Hashtag',df_allrs$demuxSNP)
 df_allrs$demuxSNP<-factor(df_allrs$demuxSNP,levels=c(paste("Hashtag",1:6,sep=""),"Doublet"))
 ggplot(data = df_allrs,
        aes(axis1 = souporcell, axis2 = demuxSNP, axis3 = HTODemux, y = ncells)) +
@@ -181,8 +184,10 @@ df_j<-data.frame(t(hto_jnorm))
 
 ````{r}
 library(ComplexHeatmap)
+sce$knn_centroid<-gsub('K','Hashtag',sce$knn_centroid)
 sce_negative<-sce[,sce$hash.ID=="Negative" & c(sce$percent_mito<15 | sce$lib_size>1000)]
-ha = HeatmapAnnotation(demuxSNP = sce_negative$knn, 
+
+ha = HeatmapAnnotation(demuxSNP = sce_negative$knn_centroid, 
                        HTODemux = sce_negative$hash.ID,
                        annotation_legend_param = list(
                           demuxSNP = list(
@@ -194,7 +199,7 @@ ha = HeatmapAnnotation(demuxSNP = sce_negative$knn,
 )
 hm<-Heatmap(counts(altExp(sce_negative,"SNP")),
         cluster_rows = FALSE,
-        column_split=sce_negative$knn,
+        column_split=sce_negative$knn_centroid,
         show_column_dend = FALSE,
         show_column_names = FALSE,
         cluster_column_slices = FALSE,
@@ -221,21 +226,21 @@ snps<-counts(altExp(sce,"SNP"))
 snps[snps==c(-1)]<-0
 library(geosphere)
 centroid<-c()
-combs1<-paste(sce$hash.ID, sce$knn_balanced[])
+combs1<-paste(sce$hash.ID, sce$knn_centroid[])
 levels1<-grep("^Negative",unique(combs1),value=TRUE)
-combs2<-paste(sce$train,sce$knn_balanced)
+combs2<-paste(sce$train,sce$knn_centroid)
 levels2<-grep("^TRUE",unique(combs2))
 centroid1<-matrix(0,92,6)
 for (i in c(1:6)) {
   hashtag<-hashtags[i]
-  centroid1[,i]<-rowMeans(snps[,sce$hash.ID=="Negative" & sce$knn_balanced==hashtag])
+  centroid1[,i]<-rowMeans(snps[,sce$hash.ID=="Negative" & sce$knn_centroid==hashtag])
 }
 colnames(centroid1)<-paste("Hashtag",c(1:6),"ds",sep="")
 #centroid1
 centroid2<-matrix(0,92,6)
 for (i in c(1:6)) {
   hashtag<-hashtags[i]
-  centroid2[,i]<-rowMeans(snps[,sce$train==TRUE & sce$knn_balanced==hashtag])
+  centroid2[,i]<-rowMeans(snps[,sce$train==TRUE & sce$knn_centroid==hashtag])
 }
 colnames(centroid2)<-paste("Hashtag", c(1:6),"hc",sep="")
 #centroid2
@@ -278,7 +283,7 @@ draw(hm,heatmap_legend_side = "bottom",column_title="Reassigned HTODemux Negativ
 sce_hashtag2<-sce[,sce$hash.ID=="Hashtag2"]
 colors_hashtags <- structure(dittoColors()[1:8], names = c("Hashtag1", "Hashtag2", "Hashtag3","Hashtag4","Hashtag5","Hashtag6","Doublet","Negative"))
 
-ha = HeatmapAnnotation(demuxSNP = sce_hashtag2$knn_balanced, 
+ha = HeatmapAnnotation(demuxSNP = sce_hashtag2$knn_centroid, 
                        HTODemux = sce_hashtag2$hash.ID,
                        annotation_legend_param = list(
                           demuxSNP = list(
@@ -291,7 +296,7 @@ ha = HeatmapAnnotation(demuxSNP = sce_hashtag2$knn_balanced,
 
 hm<-Heatmap(counts(altExp(sce_hashtag2,"SNP")),
         cluster_rows = FALSE,
-        column_split=sce_hashtag2$knn,
+        column_split=sce_hashtag2$knn_centroid,
         show_column_dend = FALSE,
         show_column_names = FALSE,
         cluster_column_slices = FALSE,
@@ -321,21 +326,21 @@ snps<-counts(altExp(sce,"SNP"))
 snps[snps==c(-1)]<-0
 library(geosphere)
 centroid<-c()
-combs1<-paste(sce$hash.ID, sce$knn_balanced[])
+combs1<-paste(sce$hash.ID, sce$knn_centroid[])
 levels1<-grep("^Hashtag2",unique(combs1),value=TRUE)
-combs2<-paste(sce$train,sce$knn_balanced)
+combs2<-paste(sce$train,sce$knn_centroid)
 levels2<-grep("^TRUE",unique(combs2))
 centroid1<-matrix(0,92,6)
 for (i in c(2,3,4,5)) {
   hashtag<-hashtags[i]
-  centroid1[,i]<-rowMeans(snps[,sce$hash.ID=="Hashtag2" & sce$knn_balanced==hashtag])
+  centroid1[,i]<-rowMeans(snps[,sce$hash.ID=="Hashtag2" & sce$knn_centroid==hashtag])
 }
 colnames(centroid1)<-paste("Hashtag",c(1:6),"ds",sep="")
 #centroid1
 centroid2<-matrix(0,92,6)
 for (i in c(1:6)) {
   hashtag<-hashtags[i]
-  centroid2[,i]<-rowMeans(snps[,sce$train==TRUE & sce$knn_balanced==hashtag])
+  centroid2[,i]<-rowMeans(snps[,sce$train==TRUE & sce$knn_centroid==hashtag])
 }
 colnames(centroid2)<-paste("Hashtag", c(1:6),"hc",sep="")
 #centroid2
@@ -409,7 +414,7 @@ hashtags<-c("Hashtag1","Hashtag2","Hashtag3","Hashtag4","Hashtag5","Hashtag6")
 for (i in seq_along(hashtags)) {
   ht<-hashtags[i]
   print(ht)
-  match<-sum((as.character(sce$hash.ID)[sce$hash.ID==ht]==as.character(sce$knn_balanced)[sce$hash.ID==ht])/length(sce$hash.ID[sce$hash.ID==ht]))
+  match<-sum((as.character(sce$hash.ID)[sce$hash.ID==ht]==as.character(sce$knn_centroid)[sce$hash.ID==ht])/length(sce$hash.ID[sce$hash.ID==ht]))
   print(match)
 }
 
@@ -430,6 +435,5 @@ lgd = Legend(col_fun = col_fun, title = "1-Jaccard distance", at = c(0, 1),
     direction = "horizontal")
 draw(lgd,test="")
 ````
-
 
 
